# milkman

./: .gitignore  .gitmodules  DEPLOYMENTS.md  Makefile  README.md  brownie-config.yml  commitlint.config.js  foundry.toml  package.json  remappings.txt  requirements-dev.txt
.github/workflows/: test.yml
contracts/: CowAnywhere.sol  Milkman.sol  UniV2PriceChecker.sol
contracts/periphery/: GasChecker.sol  HashHelper.sol  MilkmanStateHelper.sol
contracts/pricecheckers/: ChainlinkExpectedOutCalculator.sol  ChainlinkPriceChecker.sol  CurveExpectedOutCalculator.sol  CurvePriceChecker.sol  DynamicSlippageChecker.sol  FixedMinOutPriceChecker.sol  FixedSlippageChecker.sol  IExpectedOutCalculator.sol  MetaExpectedOutCalculator.sol  MetaPriceChecker.sol  PriceCheckerLib.sol  SingleSidedBPTExpectedOutCalculator.sol  SingleSidedBalancerBalWethExpectedOutCalculator.sol  UniV2ExpectedOutCalculator.sol  UniV2PriceChecker.sol  UniV3ExpectedOutCalculator.sol  UniV3PriceChecker.sol  ValidFromPriceCheckerDecorator.sol
docs/: EXAMPLES.md
interfaces/: IGPv2Settlement.sol  IPriceChecker.sol  IUniV2.sol
milkman_py/: pyproject.toml
milkman_py/milkman_py/: __init__.py  automated_price_checker_selector.py  hello.py  main.py
milkman_py/tests/: test_milkman.py
py-sdk/: setup.py
py-sdk/milkman_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: goerli_deploy.py  goerli_integration_test.py
src/: Milkman.sol
test/: Milkman.t.sol
tests/: conftest.py  test_cancel.py  test_complete.py  test_pair.py  test_request.py  test_sign.py  test_submit.py  test_unpair.py  utils.py
(+19 files in other folders)
