[tool.poetry]
name = "milkman-py"
version = "0.1.1"
description = "Python SDK for interacting with Milkman, a smart contract system that allows smart contracts (incl. Gnosis Safes) to swap assets through the CoW protocol."
authors = ["charlesndalton <charles.n.dalton@gmail.com>"]
readme = "README.md"
packages = [{include = "milkman_py"}]

[tool.poetry.dependencies]
python = "^3.9"
eth_abi = "2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
